2014-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c: Verify that DCM data is available before
	attempting to use it.  Avoids a crash due to improper DCM header.
	Problem was reported by Hanno Böck.
	(DCM_ReadNonNativeImages): Fix array over-run (off by one error)
	while looking for end of multi-fragment frames.

2014-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sun.c: Thoroughly validate Sun Rasterfile headers and
	verify that there are no arithmetic overflows in buffer-size
	calculations.  Problem was reported by Hanno Böck.

2014-11-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Magick++/Geometry.h (Magick::Geometry): Add and
	document limitPixels() and fillArea() methods to support '@' and
	'^' geometry qualifiers.  Fill area contributed by Long Ho and
	limitPixels() by Bob Friesenhahn.

	* www/Magick++/Image.rst: Document extent and resize methods.

	* Magick++/lib/STL.cpp (extentImage): New function object to
	invoke image extent method. Original implementation contributed by
	Long Ho.  Subsequently modified by Bob Friesenhahn.
	(resizeImage): New function object to invoke image resize
	method. Contributed by Long Ho.

	* Magick++/lib/Image.cpp (extent): New method to place image on
	sized canvas of constant color using gravity.  Contributed by Long
	Ho.
	(resize): New method to resize image specifying geometry, filter,
	and blur.  Original implementation contributed by Long Ho.
	Subsequently modified by Bob Friesenhahn.

2014-11-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/avi.c: AVI support in GraphicsMagick is completely
	unusable and it could never compete with dedicated software like
	'ffmpeg'.  Removing AVI support until such time it can be
	supported properly.

	* coders/viff.c: Add protections against buffer overflow by
	verifying that buffer size allocation calculations do not
	overflow.  Also added header logging for read and write. Work