@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020141130"
-#define public MagickPackageReleaseDate "snapshot-20141130"
+#define public MagickPackageVersionAddendum ".020141201"
+#define public MagickPackageReleaseDate "snapshot-20141201"
