@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2014-12-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/colormap.c (AllocateImageColormap): Refuse to allocate a
+colormap larger than MaxColormapSize.</li>
+<li>coders/psd.c (ReadPSDImage): Avoid extremely long execution time
+if the PSD colormap size is astonishingly large.  Problem was
+reported by Hanno Böck.</li>
+</ul>
+</blockquote>
 <p>2014-11-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
